examples/test/testpolicy1409.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1409
  namespace: namespace415
spec:
  podSelector:
    matchLabels:
      key3: value45
      key33: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value38
          key18: value5
          key17: value35
      podSelector:
        matchLabels:
          key11: value43
          key46: value18
          key29: value39
